@@ -1,6 +1,3 @@
-[submodule "src/tkdnd"]
-	path = src/tkdnd
-	url = https://github.com/chpock/tkdnd
 [submodule "src/tcl"]
 	path = src/tcl
 	url = https://github.com/tcltk/tcl.git
@@ -10,9 +7,6 @@
 [submodule "src/thread"]
 	path = src/thread
 	url = https://github.com/tcltk/thread.git
-[submodule "src/tktable"]
-	path = src/tktable
-	url = https://github.com/chpock/tktable.git
 [submodule "src/zlib"]
 	path = src/zlib
 	url = https://github.com/madler/zlib.git
@@ -40,3 +34,6 @@
 [submodule "src/tdom"]
 	path = src/tdom
 	url = https://github.com/chpock/tdom.git
+[submodule "src/tclhttps"]
+	path = src/tclhttps
+	url = https://github.com/chpock/tclhttps.git
