@@ -29,12 +29,11 @@ foreach { pkgName pkgVersion constraints } {
     Tk                  8.6.14 {}
     Ttk                 8.6.14 {}
     http                2.9.8  {}
+    https               0.1.0  {}
     Thread              2.8.9  {}
     msgcat              1.6.1  {}
     registry            1.3.5  {win}
-    Tktable             2.11.1 {}
     twapi               4.7.2  {win}
-    tkdnd               2.9.4  {}
     vfs                 1.4.2  {}
     cookfs              1.6.0  {}
 } {
