@@ -50,33 +50,6 @@ set expected [dict create {*}{
             installkit_raw { 2.11 2.7 2.3.2 2.3 2.2 2.1.2 2.1 2.0 }
             libtk*.so      { 2.7 2.3 2.1.3 2.1 2.0 }
         }
-        libs-deps {
-            libTktable*.so {
-                /lib/ld-linux.so.2
-                libX11.so.6
-                libXau.so.6
-                libc.so.6
-                libdl.so.2
-                libxcb.so.1
-                linux-gate.so.1
-            }
-            libtkdnd*.so {
-                /lib/ld-linux.so.2
-                libX11.so.6
-                libXau.so.6
-                libXcursor.so.1
-                libXfixes.so.3
-                libXrender.so.1
-                libc.so.6
-                libdl.so.2
-                libxcb.so.1
-                linux-gate.so.1
-             }
-        }
-        libs-glibc {
-            libTktable*.so { 2.7 2.3 2.1.3 2.0 }
-            libtkdnd*.so   { 2.1.3 2.0 }
-        }
     }
     Linux-x86_64 {
         installkit-deps {
@@ -105,33 +78,6 @@ set expected [dict create {*}{
             installkit_raw { 2.11 2.7 2.3.2 2.3 2.2.5 }
             libtk*.so      { 2.7 2.3 2.2.5 }
         }
-        libs-deps {
-            libTktable*.so {
-                /lib64/ld-linux-x86-64.so.2
-                libX11.so.6
-                libXau.so.6
-                libc.so.6
-                libdl.so.2
-                libxcb.so.1
-                linux-vdso.so.1
-            }
-            libtkdnd*.so {
-                /lib64/ld-linux-x86-64.so.2
-                libX11.so.6
-                libXau.so.6
-                libXcursor.so.1
-                libXfixes.so.3
-                libXrender.so.1
-                libc.so.6
-                libdl.so.2
-                libxcb.so.1
-                linux-vdso.so.1
-            }
-        }
-        libs-glibc {
-            libTktable*.so { 2.7 2.3 2.2.5 }
-            libtkdnd*.so   { 2.2.5 }
-        }
     }
     MacOS-X {
         installkit-deps {
@@ -150,20 +96,6 @@ set expected [dict create {*}{
                 /System/Library/Frameworks/Foundation.framework/Versions/C/Foundation
                 /System/Library/Frameworks/IOKit.framework/Versions/A/IOKit
                 /System/Library/Frameworks/QuartzCore.framework/Versions/A/QuartzCore
-                /usr/lib/libSystem.B.dylib
-                /usr/lib/libobjc.A.dylib
-            }
-        }
-        libs-deps {
-            libTktable*.dylib {
-                /usr/lib/libSystem.B.dylib
-            }
-            libtkdnd*.dylib {
-                /System/Library/Frameworks/AppKit.framework/Versions/C/AppKit
-                /System/Library/Frameworks/Carbon.framework/Versions/A/Carbon
-                /System/Library/Frameworks/Cocoa.framework/Versions/A/Cocoa
-                /System/Library/Frameworks/CoreFoundation.framework/Versions/A/CoreFoundation
-                /System/Library/Frameworks/Foundation.framework/Versions/C/Foundation
                 /usr/lib/libSystem.B.dylib
                 /usr/lib/libobjc.A.dylib
             }
@@ -205,19 +137,6 @@ set expected [dict create {*}{
                 pdh.dll
             }
         }
-        libs-deps {
-            Tktable*.dll {
-                KERNEL32.dll
-                msvcrt.dll
-            }
-            tkdnd*.dll {
-                KERNEL32.dll
-                SHELL32.dll
-                USER32.dll
-                msvcrt.dll
-                ole32.dll
-            }
-        }
     }
     Windows-x86_64 {
         installkit-deps {
@@ -253,19 +172,6 @@ set expected [dict create {*}{
                 msvcrt.dll
                 ole32.dll
                 pdh.dll
-            }
-        }
-        libs-deps {
-            Tktable*.dll {
-                KERNEL32.dll
-                msvcrt.dll
-            }
-            tkdnd*.dll {
-                KERNEL32.dll
-                SHELL32.dll
-                USER32.dll
-                msvcrt.dll
-                ole32.dll
             }
         }
     }
@@ -326,55 +232,6 @@ test installkit-deps-installkit-glibc {installkit GLIBC requirement} -constraint
 test installkit-deps-installkit-rpath {installkit RPATH} -constraints unix -setup [concat \
     $setup_load_deps \
     installkit-deps.txt \
-] -body {
-    set result [list]
-    dict for { exe data } $deps {
-        dict for { type data } $data {
-            if { $type ne "RPATH" } continue
-            if { $data eq "None" } continue
-            lappend result "$exe $data"
-        }
-    }
-    join $result \n
-} -match glob -result "" -cleanup {
-    unset deps
-}
-
-test installkit-deps-libs-deps {other packages dependencies} -setup [concat \
-    $setup_load_deps \
-    libs-deps.txt \
-] -body {
-    set result [list]
-    dict for { exe data } $deps {
-        dict for { type data } $data {
-            if { $type ne "DEPS" } continue
-            lappend result "$exe [string tolower $data]"
-        }
-    }
-    join $result \n
-} -match glob -result [{*}$expected libs-deps] -cleanup {
-    unset deps
-}
-
-test installkit-deps-libs-glibc {other packages GLIBC requirements} -constraints linuxOnly -setup [concat \
-    $setup_load_deps \
-    libs-deps.txt \
-] -body {
-    set result [list]
-    dict for { exe data } $deps {
-        dict for { type data } $data {
-            if { $type ne "GLIBC" } continue
-            lappend result "$exe $data"
-        }
-    }
-    join $result \n
-} -match glob -result [{*}$expected libs-glibc] -cleanup {
-    unset deps
-}
-
-test installkit-deps-libs-rpath {other packages RPATH} -constraints unix -setup [concat \
-    $setup_load_deps \
-    libs-deps.txt \
 ] -body {
     set result [list]
     dict for { exe data } $deps {
